--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,9 @@
+include README.md
 include README.rst
-include setttings/*
-
-
+include *.yaml
+include *.txt
+include *.md
+include *.rst
+recursive-include qubits *
+global-exclude *.pyo
+global-exclude *.pyc
